# llm-observability-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: llm_routes.py
backend/app/api/v1/: health.py  traces.py
backend/app/auth/: api_key.py
backend/app/core/: exceptions.py  idempotency.py  logging.py
backend/app/db/: __init__.py  clickhouse.py  postgres.py  session.py
backend/app/db/models/: __init__.py  api_key.py  base.py  org.py  project.py  trace.py
backend/app/db/repositories/: trace_repo.py
backend/app/evaluators/: __init__.py  bertscore.py  judge.py  pii.py  ragas.py
backend/app/schemas/: common.py  trace.py
backend/app/services/: cost.py  llm_service.py  trace_reader.py  trace_writer.py
backend/app/tracer/: middleware.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/scripts/: clickhouse_migrate.py  seed_demo_tenant.py
backend/tests/: conftest.py
backend/tests/integration/: test_ingest_endpoint.py
backend/tests/unit/: test_api_key_hash.py  test_bertscore.py  test_cost_calc.py  test_judge.py  test_llm_service.py  test_pii.py  test_ragas.py  test_trace_reader.py  test_trace_writer.py
docs/: v0.1-walkthrough.md
docs/adr/: 0001-clickhouse-over-postgres-for-traces.md
frontend/: package-lock.json
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/login/: actions.ts  login-form.tsx  page.tsx
frontend/app/traces/: layout.tsx  page.tsx
frontend/lib/: backend.ts  format.ts  session.ts  types.ts
infra/clickhouse/config.d/: listen.xml
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/src/aegis_sdk/: __init__.py  _version.py  buffer.py  circuit.py  client.py  instrument.py  trace.py  transport.py
sdk/python/tests/: _fakes.py  test_buffer.py  test_circuit.py  test_client.py  test_instrument.py  test_trace.py  test_transport.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: quickstart.ts
sdk/typescript/src/: buffer.ts  circuit.ts  client.ts  index.ts  instrument.ts  trace.ts  transport.ts
sdk/typescript/tests/: _fakes.ts  buffer.test.ts  circuit.test.ts  client.test.ts  instrument.test.ts  trace.test.ts  transport.test.ts
week0/: NOTES_block3.md  NOTES_block4.md  NOTES_block5.md  NOTES_block6.md  NOTES_block7.md  _preflight.py  clickhouse_sandbox.py  embedding_drift_sandbox.py  hello_llm.py  instrument_demo.py  litellm_notes.md  litellm_sandbox.py  ragas_e2e_probe.py
week0/block6-nextjs/: package-lock.json  package.json
week0/block6-nextjs/app/: actions.ts  page.tsx
week0/block6-nextjs/lib/: trace-store.ts
week0/block7-k8s/: kind-config.yaml
week0/block7-k8s/app/: Dockerfile  (+2 more)
(+11 files in other folders)
