[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-sdk"
dynamic = ["version"]
description = "Drop-in tracing for LLM apps — instruments your OpenAI-compatible client and ships traces to Aegis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pottri Selvan R" }]
keywords = ["llm", "observability", "tracing", "openai", "aegis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# httpx is the only hard dependency — it's the transport. `openai` is intentionally NOT
# required: the SDK instruments whatever OpenAI-compatible client you already have, so
# the app brings its own. Install it yourself, or via the `openai` extra below.
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=8", "openai>=1.0"]

[project.urls]
Homepage = "https://github.com/pottriselvan/aegis"
Repository = "https://github.com/pottriselvan/aegis"

[tool.hatch.version]
path = "src/aegis_sdk/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
